--- a/Charity/charity.html
+++ b/Charity/charity.html
@@ -15,9 +15,9 @@
     		<div class="text-center">
     		    <ul class="navlist">
     			    <li><a href="">Home</a></li>
-    			    <li><a href="">About</a></li>
-    			    <li><a href="">Projects</a></li>
-    			    <li><a href="">Donate</a></li>
+    			    <li><a href="#page2">About</a></li>
+    			    <li><a href="#page4">Programs</a></li>
+    			    <li><a href="#page5">Team</a></li>
     			    <li><a href="">Contact</a></li>
     		    </ul>
     		</div>
@@ -25,7 +25,7 @@
     		<a href="" class="donatebtn">Donate</a>
     	</header>
 
-    	<div class="container-fluid page2">
+    	<div class="container-fluid" id="page2">
     		<div class="row">
     		    <article class="col-lg-4 col-md-4 col-sm-12 col-xm-12 info">
     		    	<h1 class="num">28</h1>
@@ -65,8 +65,9 @@
     		</div>
     	</div>
 
-    	<div class="page3">
+    	<div id="page3">
     		<div class="picture">	
+                <p>a picture</p>
     		</div>
     		<div class="row">
     			<div class="col-lg-12 col-sm-12 col-md-12 col-xm-12 text-center">
@@ -77,7 +78,7 @@
     		</div>
     	</div>
 
-    	<div class="page3">
+        <div id="page4">
     		<div class="row">
     		    <article class="col-lg-4 col-md-4 col-sm-12 col-xm-12 info">
     		    	<h1 class="num">#</h1>
@@ -104,28 +105,28 @@
 
     		<div class="gallery text-center">
     			<div class="nail col-lg-2 col-md-5 col-sm-11 col-xm-11">
-    				<img src="https://cdn.pixabay.com/photo/2016/03/18/15/21/help-1265227__340.jpg" alt="" class="" />
+    				<img src="prog.jpg" alt="" class="" />
     				<div class="overlay text-center">
     					<h3>PROG NAME</h3>
     					<h6>CITY NAME</h6>
     				</div>
     			</div>
     			<div class="nail col-lg-2 col-md-5 col-sm-11 col-xm-11">
-    				<img src="https://cdn.pixabay.com/photo/2016/03/18/15/21/help-1265227__340.jpg" alt="" class="" />
+    				<img src="prog.jpg" alt="" class="" />
     				<div class="overlay text-center">
     					<h3>PROG NAME</h3>
     					<h6>CITY NAME</h6>
     				</div>
     			</div>
     			<div class="nail col-lg-2 col-md-5 col-sm-11 col-xm-11">
-    				<img src="https://cdn.pixabay.com/photo/2016/03/18/15/21/help-1265227__340.jpg" alt="" class="" />
+    				<img src="prog.jpg" alt="" class="" />
     				<div class="overlay text-center">
     					<h3>PROG NAME</h3>
     					<h6>CITY NAME</h6>
     				</div>
     			</div>
     			<div class="nail col-lg-2 col-md-5 col-sm-11 col-xm-11">
-    				<img src="https://cdn.pixabay.com/photo/2016/03/18/15/21/help-1265227__340.jpg" alt="" class="" />
+    				<img src="prog.jpg" alt="" class="" />
     				<div class="overlay text-center">
     					<h3>PROG NAME</h3>
     					<h6>CITY NAME</h6>
@@ -135,7 +136,7 @@
     		</div>
     	</div>
 
-    	<div class="page3">
+    	<div id="page5">
     		<div class="row">
 	    		<p class="text-center quote col-lg-12 col-md-12 col-sm-12 col-xm-12 ">
 	                <span class="quotes">"</span>
@@ -196,9 +197,9 @@
             <div class="sect col-lg-3 col-md-6 col-sm-6 col-xm-12">
                 <h4 class="text-center">MENU</h4>
                     <ul>
-                        <li><a href="">About</a></li>
-                        <li><a href="">Projects</a></li>
-                        <li><a href="">Donate</a></li>
+                        <li><a href="#page2">About</a></li>
+                        <li><a href="#page4">Programs</a></li>
+                        <li><a href=".main-header">Donate</a></li>
                     </ul>
             </div>
 
@@ -211,8 +212,8 @@
                 </ul>
             </div>
 
-            <div>
-                <p>Incldue map</p>
+            <div id="map">
+                <p>Include map</p>
             </div>
         </footer>
 
